[package]
name = "thetime"
version = "0.5.2"
edition = "2021"
license = "Apache-2.0"
description = "A simple but powerful Rust library for dealing with the time, both NTP and System. Contains wrappers for functions often buried in modules. Has extensive support for unusual epochs (Windows LDAP 100ns, MacOS and MacOS CFA, SAS 4GL, WebKit and Chromium 1μs). Supports timezone conversion, and addition/subtraction of various amounts"
repository = "https://github.com/werdl/thetime"
documentation = "https://docs.rs/thetime"
categories = ["date-and-time", "localization", "network-programming"]
#              obviously        timezones.rs    ntp.rs
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {"version" = "0.4.31", default-features = false, features = ["clock"]} # need clock to get local times

[features]
default = ["ntp"]
ntp = []